mehari/src/annotate/seqvars/consequence/snapshots/mehari__annotate__seqvars__consequence__logic__test__annotate_snv_opa1_csq@3-193332512-T-G.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: G
  consequences:
    - missense_variant
    - exonic_splice_region_variant
  putative_impact: moderate
  gene_symbol: OPA1
  gene_id: "HGNC:8140"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_130837.3
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank:
    ord: 2
    total: 31
  hgvs_g: g.193332512T>G
  hgvs_n: n.203T>G
  hgvs_c: c.33T>G
  hgvs_p: p.Cys11Trp
  cdna_pos:
    ord: 203
    total: 6429
  cds_pos:
    ord: 33
    total: 3048
  protein_pos:
    ord: 11
    total: 1015
  distance: 0
  strand: 1
  messages: ~
