mehari/src/annotate/seqvars/consequence/snapshots/mehari__annotate__seqvars__consequence__logic__test__annotate_snv_opa1_csq@3-193332838-T-G.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
---
- allele:
    Alt:
      alternative: G
  consequences:
    - splice_region_variant
    - coding_transcript_intron_variant
  putative_impact: low
  gene_symbol: OPA1
  gene_id: "HGNC:8140"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_130837.3
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank:
    ord: 3
    total: 30
  hgvs_g: g.193332838T>G
  hgvs_n: n.521+8T>G
  hgvs_c: c.351+8T>G
  hgvs_p: p.?
  cdna_pos: ~
  cds_pos: ~
  protein_pos: ~
  distance: 8
  strand: 1
  messages: ~
